2009-01-24  Bruno Haible  <bruno@clisp.org>

	* lib/savedir.c (isdir): New declaration.

	* src/dfa.c (update_mb_len_index): Change argument type to
	  'char const *'.
	  (match_mb_charset): Cast argument to strncpy.
	  (dfaexec): Add pointer cast.

	* src/grep.c (parse_grep_colors): Add braces for disambiguation.

	* src/kwset.c: Include xalloc.h instead of declaring xmalloc manually.

2009-01-20  Tony Abou-Assaleh <taa@acm.org>

	* tests/foad1.sh: disable tests that fail under cs_CZ.UTF-8.
	* tests/fmbtest.sh: likewise
	* README: added "KNOWN BUGS" section
	* src/grep.c: updated copyright year

2008-12-12  Karl Berry  <karl@gnu.org>

	* doc/grep.texi (Exit Status, grep Programs): move these
	nodes to under Invoking.

	* doc/grep.texi: remove all remaining node pointers;
	downcase cindex entries.

2008-12-11  Karl Berry  <karl@gnu.org>

	* doc/grep.texi (Copying): update url's.
	(GNU General Public License): remove node.
	(GNU Free Documentation License): @include fdl.texi instead.
	(@copying): update to v1.3 or later.
	* doc/fdl.texi: new file, copied from
	http://www.gnu.org/licenses/fdl.texi.
	* doc/Makefile.am (grep_TEXINFOS): new variable to get fdl.texi.
	Also add usual GPL license statement.

	* doc/grep.texi (Index): Merge in Concept Index node,
	to have only one index.  Arrange @syncodeindex's accordingly.

2008-12-10  Karl Berry  <karl@gnu.org>

	* doc/grep.texi (@copying): use @copying; move @contents to
	  beginning; rearrange other frontmatter in the conventional ways.

2008-06-15  Tony Abou-Assaleh <taa@acm.org>

	* src/ansi2knr.[1c]: Remove generated files (installed by
	  automake). Thanks to Emanuele Giaquinta for this.

2008-02-14  Tony Abou-Assaleh <taa@acm.org>

	* src/grep.c: Factor out copyright year in --version. Thanks to
	  Karl Berry for this.
	* src/grep.c: Update copyright years

	* po/POTFILES.in: +src/system.h +lib/closeout.c +lib/regex.c
	  +lib/xmalloc.c -lib/getopt1.c

2008-02-09  Tony Abou-Assaleh <taa@acm.org>
