@@ -1,5 +1,9 @@
 2009-01-24  Bruno Haible  <bruno@clisp.org>
 
+	* lib/posix/regex.h (__restrict, __restrict_arr): Remove macros.
+	  (_Restrict_, _Restrict_arr_): New macros. From gnulib/lib/regex.h.
+	  (regcomp, regexec): Update declarations to use them.
+
 	* lib/savedir.c (isdir): New declaration.
 
 	* src/dfa.c (update_mb_len_index): Change argument type to
